Fix: QR visibility on android devices
add display block property to ensure it isn't set to none while qrcode rendering, additional: fix styles for hfest certificates

--- a/docs/style.css
+++ b/docs/style.css
@@ -48,6 +48,7 @@ body {
 
 .image-container img,
 canvas {
+    display: block;
     width: 100%;
     max-width: 96px;
     height: auto;
